--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recetas</title>
 </head>
 <body>
     <h1>Recetas Odin</h1>
+    <a href="./recetas/noquis.html">Ñoquis o Gnoccis</a>
 </body>
 </html>
