--- a/recetas/noquis.html
+++ b/recetas/noquis.html
@@ -1,1 +1,14 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recetas</title>
+</head>
+<body>
+    <h1>Ñoquis</h1>
+    <img src="https://statics-cuidateplus.marca.com/cms/styles/natural/azblob/noquis-beneficios.jpg.webp?itok=KyQqukcK" alt="">
+
+</body>
+</html>
