creacionde archivdao de estilos, actualizacion visual de index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recetas</title>
 </head>
 <body>
-    <h1>Recetas Odin</h1>
-    <a href="./recetas/noquis.html">Ñoquis o Gnoccis</a>
+    <div class="logo">
+     <img class="logo-img" src="./imagenes/logo.png" alt="">
+    </div> 
+
+    <div>  
+      <ul class="lista">
+         <li><a href="./recetas/lasagna.html">Lasagna</a></li>
+         <li><a href="./recetas/papashorno.html">Papas al horno</a></li>
+         <li> <a href="./recetas/noquis.html">Ñoquis o Gnoccis</a> </li>
+      </ul>  
+    </div>     
+
 </body>
 </html>
