Modficacion de index.html, se agrega elementos flex

--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
     <div class="logo">
      <img class="logo-img" src="./imagenes/logo.png" alt="">
     </div> 
+    
+    <div class="titulo">
+      Recetas
+    </div>
 
-    <div>  
-      <ul class="lista">
-         <li><a href="./recetas/lasagna.html">Lasagna</a></li>
-         <li><a href="./recetas/papashorno.html">Papas al horno</a></li>
-         <li> <a href="./recetas/noquis.html">Ñoquis o Gnoccis</a> </li>
-      </ul>  
-    </div>     
+    <div class="recetas-container">
+      <div class="receta-box lasagna">
+        <img src="./imagenes/lasagna/lasagna.jpeg" alt="">
+        Lasagna italiana
+      </div>
 
+      <div class="receta-box lasagna">
+        <img src="./imagenes/lasagna/lasagna.jpeg" alt="">
+        Lasagna italiana
+      </div>
+
+      <div class="receta-box lasagna">
+        <img src="./imagenes/lasagna/lasagna.jpeg" alt="">
+        Lasagna italiana
+      </div>
+    </div>
 </body>
 </html>
